# sentinel-ai

./: .env.example  .gitignore  PROGRESS_SUMMARY.md
.github/: copilot-instructions.md
.specify/memory/: constitution.md
backend/: .env.example  .env.test  .flake8  README.md  pyproject.toml  start_data_api.py  start_metrics_api.py
backend/src/: __init__.py  __version__.py
backend/src/api/data_retrieval/: __init__.py  app.py  models.py
backend/src/api/metrics_collection/: __init__.py  app.py  models.py
backend/src/database/: __init__.py  config.py  migrations.py
backend/src/database/migrations/: 001_initial_schema.sql  002_sample_data.sql
backend/src/models/: __init__.py  agent.py  base.py  configuration.py  metric.py  session.py
backend/src/services/: __init__.py  aggregation.py  cost_analysis.py  performance_diagnosis.py
backend/tests/contract/: test_agents_get.py  test_data_api_health.py  test_export_get.py  test_export_post.py  test_health_check.py  test_metrics_get.py  test_metrics_post.py
backend/tests/integration/: test_cost_management.py  test_data_export.py  test_performance_diagnosis.py
backend/tests/unit/: test_models.py  test_services.py
docker/: Dockerfile.dashboard  Dockerfile.data-api  Dockerfile.metrics-api  docker-compose.prod.yml  docker-compose.yml  nginx.conf
frontend/: .env.example  .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: MetricsSummaryCards.tsx
specs/001-sentinel-ai-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+6 files in other folders)
